Sat Aug 13 22:07:49 2005  Minero Aoki  <aamine@loveruby.net>

	* lib/fileutils.rb (remove_entry_secure): uses chdir(2) and check
	  if current directory is correct. [ruby-dev:26100] [ruby-dev:26226]

Sat Aug 13 21:11:05 2005  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: add WIN32OLE_VARIANT class.

	* ext/win32ole/tests/testall.rb: ditto.

	* ext/win32ole/tests/testOLEVARIANT.rb: ditto.

Sat Aug 13 18:51:26 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_block_pass): distinguish current block from others.
	  fixed: [ruby-dev:26274]

	* ext/stringio/stringio.c (strio_set_string): disallow nil.
	  http://www.rubyist.net/~nobu/t/20050811.html#c05

Sat Aug 13 08:01:59 2005  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/nkf/lib/kconv.rb: Kconv.kconv is now alias of Kconv.conv
	* ext/nkf/lib/kconv.rb: remove nkf dependend symbols fomr SYMBOL_TO_OPTION

Fri Aug 12 17:06:53 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (f_larglist): allow optional arguments even when
	  parentheses are omitted.  based on Nobu's patch from
	  http://www.rubyist.net/~nobu/t/20050805.html

	* parse.y (parser_yylex): update & maintain lpar_beg for detect
	  lambda parameters.

Thu Aug 11 23:29:03 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c: keep holding string after closed.

Thu Aug 11 20:48:40 2005  Tadashi Saito  <shiba@mail2.accsnet.ne.jp>

	* numeric.c (fix_equal, fix_cmp, fix_gt, fix_ge, fix_lt, fix_le):
	  reduce coercing when a method knows about a operand type.
	  [ruby-dev:26789]

Thu Aug 11 13:01:48 2005  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss: fixed sort bug. [ruby-list:41018]

	* lib/rss/1.0.rb (RSS::RDF::Channel#setup_maker_attributes):
	  removed self.

	* lib/rss/maker/base.rb (RSS::Maker::ItemsBase#<=>): use #date
	  instead of @date.
	  (RSS::Maker::Base::self.def_array_element): added #size.

	* lib/rss/maker/1.0.rb
	  (RSS::Maker::RSS10::Channel#to_rss,